--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^1.1.3",
@@ -25,6 +26,7 @@
     "eslint": "^8.27.0",
     "eslint-config-alloy": "^4.7.0",
     "eslint-plugin-vue": "^9.7.0",
+    "husky": "^8.0.2",
     "prettier": "2.7.1",
     "sass": "^1.56.1",
     "unplugin-auto-import": "^0.11.4",
@@ -36,5 +38,11 @@
     "commitizen": {
       "path": "node_modules/cz-customizable"
     }
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue}": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
