--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode development",
     "build": "vite build",
     "preview": "vite preview",
     "prepare": "husky install"
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "element-plus": "^2.2.21",
+    "md5": "^2.3.0",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6"
